Revision history for Perl extension Apache::PageKit.

	For more details on migration, see migration/README
1.09
	- Add new global option protect_static (Boris Zentner)
	- Remove some mystery chars (0xA0) (Boris Zentner)
	- Add new hook pkit_on_error to catch and maybe repair fatal errors
		(Boris Zentner)
	! Simplified and more robust startup (Boris Zentner)
	- Clear missing server section on reload (Boris Zentner)
	- Die if a conversion from one charset to another is not possible.
		Maybe a char is not part of the target charset.
		(Boris Zentner, Gabriel Burka)
	! Add protection of static pages with the require_login config
		attribute. (Boris Zentner)
	- Fix two cases where a filehandle can be used even if open failed
		(Boris Zentner)
	- Fix uri_prefix so that the url did not grow anymore (Boris Zentner)
	- Remove unused modules Data::Dumper and Carp from View.pm (Boris Zentner)
	- Fix to deliver static pages unzipped if desired (Anton Permyakov)
	- Fix case where wrong cached file is used for xsl files with
		reload="no" and first called without parameters in the
		URL (Boris Zentner, Ben Ausden)
1.08
	- Added on-line editing tools
	- Add Postgres support (Chris Hamilton)
        - Add support for page based sessions (Boris Zentner)
        - Add support for localized messages of pkit (Boris Zentner)
        - Add fr message catalog (David Raimbault)
        - Add pt message catalog (Leonardo T. de Carvalho)
        - Add de message catalog (Boris Zentner)
        ! Change default for html_clean_level to 0 (Boris Zentner)
        - Add <PKIT_NOT_ERROR> directive to seperate errors
		from messages (David Christian)
        ! Catch up with new interface in XML::LibXML 1.31 (Anton Berezin)
        - Fix eg/View/(xml|wml|pdf)/simple_page.xsl (Boris Zentner)
        - Add pkit_get_config_attr function to get config options from your
		Config.xml (Boris Zentner, Leonardo T. de Carvalho)
	- Add new <USER> section in Config/Config.xml where your own