@@ -1,7 +1,7 @@
 <chapter><?dbhtml filename="features.html"?>
 <chapterinfo>
 <releaseinfo role="meta">
-$Id: features.xml,v 1.17 2002/03/22 23:12:04 tjmather Exp $
+$Id: features.xml,v 1.18 2002/04/22 04:52:53 tjmather Exp $
 </releaseinfo>
 </chapterinfo>
 <title>Overview of Features</title>
@@ -424,6 +424,25 @@ across your Derived Model Classes.
    PageKit takes care of opening and closing sessions.  Note that sessions
    are only created when something is written to session hash.
   </para>
+  <warning>
+   <title>Warning!</title>
+   <para>Because of the way Apache::SessionX works, the session only gets saved
+    if top level element in the tied hash gets changed.
+   </para>
+   <informalexample>
+    <programlisting>
+    # session will not be saved, if 'foo' was already in $session.
+    my $session = $model->session;
+    $session->{'foo'}->{'bar'} = 1;
+
+    # session will be saved
+    my $session = $model->session;
+    $session->{'foo'}->{'bar'} = 1;
+    # since 'baz' is top level element and is assigned, session will be saved
+    $session->{'baz'} = 1;
+    </programlisting>
+   </informalexample>
+  </warning>
   <para>
    To store information during a request, use the
    <literal><link linkend="model.api.pnotes">pnotes</link></literal> method.
